game coming together, basic functions working, much needed css later

--- a/index.html
+++ b/index.html
@@ -17,13 +17,50 @@
 			<div class="row StartButton center-block">
 			</div>
 			<div class="row TimeRemaining center-block">
-				<p>Time Remaining: <span id="TimeCountdown">30</span> Seconds</p>
+				<p>Time Remaining: <span class="TimeCountdown">30</span> Seconds</p>
 			</div>
 			<div class="row Question center-block">
-
+				
 			</div>
 			<div class="row Choices center-block">
+				<div class="AnswerDivOne center-block"></div>
+				<div class="AnswerDivTwo center-block"></div>
+				<div class="AnswerDivThree center-block"></div>
+			</div>
+			<div class="row CorrectResponse center-block">
+				<h2>Correct!</h2>
+			</div>
+			<div class="row IncorrectResponse center-block">
+				<h2>Wrong!</h2>
+			</div>
+			<div class="row OutOfTime center-block">
+				<h2>Out of Time!</h2>
+			</div>
+			<div class="row InformUserOfAnswer center-block">
+				<h2>The Correct Answer was: <span class="AnswerSpace"></span></h2>
+			</div>
+			
+			<div class="row AnswerImage center-block">
 
+			</div>
+			<div class="row AllDone center-block">
+				<h2>All Done, Here's How You Did</h2>
+			</div>
+			<div class="row AllResults center-block">
+				<div class="center-block">
+					Correct Answers: <span class="CorrectAnswersSpan"></span>
+				</div>
+				<div class="center-block">
+					Incorrect Answers: <span class="IncorrectAnswersSpan"></span>
+				</div>
+				<div class="center-block">
+					Unanswered: <span class="UnansweredSpan"></span>
+				</div>
+			</div>
+			<div class="row StartOver center-block">
+				<button class="StartOverButton btn-primary">
+				Start Over?
+				</button>
 			</div>
 		</div>
 
